--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@mui/lab": "^5.0.0-alpha.147",
     "@mui/material": "^5.14.12",
     "apexcharts": "^3.43.0",
+    "axios": "^1.6.7",
     "date-fns": "^2.30.0",
+    "file-saver": "^2.0.5",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
@@ -38,9 +40,13 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.47.0",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^10.0.4",
     "simplebar-react": "^3.2.4"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.23.10",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react-swc": "^3.4.0",
     "eslint": "^8.51.0",
     "eslint-config-airbnb": "^19.0.4",
